--- a/laboratorio_2/Problema1/db/alu_4bit.lpc.html
+++ b/laboratorio_2/Problema1/db/alu_4bit.lpc.html
@@ -64,6 +64,22 @@
 <TD >0</TD>
 </TR>
 <TR >
+<TD >xorr</TD>
+<TD >8</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >5</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
 <TD >orr</TD>
 <TD >8</TD>
 <TD >0</TD>
