Implementacion de shifts
Se crea e implementan los modulos de shift left y shift right, se agregan casos de prueba al testbench, funciona correctamente

--- a/laboratorio_2/Problema1/db/alu_4bit.lpc.html
+++ b/laboratorio_2/Problema1/db/alu_4bit.lpc.html
@@ -64,6 +64,38 @@
 <TD >0</TD>
 </TR>
 <TR >
+<TD >right</TD>
+<TD >4</TD>
+<TD >1</TD>
+<TD >0</TD>
+<TD >1</TD>
+<TD >6</TD>
+<TD >1</TD>
+<TD >1</TD>
+<TD >1</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >left</TD>
+<TD >4</TD>
+<TD >1</TD>
+<TD >0</TD>
+<TD >1</TD>
+<TD >6</TD>
+<TD >1</TD>
+<TD >1</TD>
+<TD >1</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
 <TD >xorr</TD>
 <TD >8</TD>
 <TD >0</TD>
