--- a/laboratorio_3/db/Battleship.lpc.html
+++ b/laboratorio_3/db/Battleship.lpc.html
@@ -16,15 +16,63 @@
 <TH>Output only Bidir</TH>
 </TR>
 <TR >
-<TD >videoGen_inst</TD>
+<TD >vga_inst|videoGen_inst</TD>
 <TD >95</TD>
-<TD >119</TD>
+<TD >16</TD>
 <TD >0</TD>
-<TD >119</TD>
+<TD >16</TD>
 <TD >24</TD>
-<TD >119</TD>
-<TD >119</TD>
-<TD >119</TD>
+<TD >16</TD>
+<TD >16</TD>
+<TD >16</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >vga_inst|vgaCont</TD>
+<TD >1</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >24</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >vga_inst|vgapll</TD>
+<TD >1</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >1</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >vga_inst</TD>
+<TD >76</TD>
+<TD >75</TD>
+<TD >0</TD>
+<TD >75</TD>
+<TD >29</TD>
+<TD >75</TD>
+<TD >75</TD>
+<TD >75</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
