--- a/laboratorio_3/db/Battleship.lpc.html
+++ b/laboratorio_3/db/Battleship.lpc.html
@@ -16,15 +16,47 @@
 <TH>Output only Bidir</TH>
 </TR>
 <TR >
+<TD >vga_inst|videoGen_inst|win_message|char_gen_rom</TD>
+<TD >14</TD>
+<TD >1</TD>
+<TD >0</TD>
+<TD >1</TD>
+<TD >1</TD>
+<TD >1</TD>
+<TD >1</TD>
+<TD >1</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >vga_inst|videoGen_inst|win_message</TD>
+<TD >20</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >1</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
 <TD >vga_inst|videoGen_inst|lose_message|char_gen_rom</TD>
 <TD >14</TD>
-<TD >4</TD>
-<TD >0</TD>
-<TD >4</TD>
 <TD >1</TD>
-<TD >4</TD>
-<TD >4</TD>
-<TD >4</TD>
+<TD >0</TD>
+<TD >1</TD>
+<TD >1</TD>
+<TD >1</TD>
+<TD >1</TD>
+<TD >1</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
@@ -49,7 +81,7 @@
 </TR>
 <TR >
 <TD >vga_inst|videoGen_inst</TD>
-<TD >171</TD>
+<TD >172</TD>
 <TD >1</TD>
 <TD >0</TD>
 <TD >1</TD>
@@ -97,14 +129,14 @@
 </TR>
 <TR >
 <TD >vga_inst</TD>
+<TD >153</TD>
 <TD >152</TD>
-<TD >151</TD>
 <TD >0</TD>
-<TD >151</TD>
+<TD >152</TD>
 <TD >29</TD>
-<TD >151</TD>
-<TD >151</TD>
-<TD >151</TD>
+<TD >152</TD>
+<TD >152</TD>
+<TD >152</TD>
 <TD >0</TD>
 <TD >0</TD>
 <TD >0</TD>
